@@ -3,6 +3,7 @@ uoproxy (0.4.1) unstable; urgency=low
   * fix auto-closing gumps in multi client mode
   * fix walk display on secondary client (workaround for v7 client bug)
   * hide client IP in CreateCharacter packet (antispy)
+  * support new character creation packet (0xF8) from client 7.0.16.0
 
  --
 
